rsbinder/src/sys/sys.rs

#[test]
fn bindgen_test_layout_binder_node_info_for_ref() {
    assert_eq!(
        ::std::mem::size_of::<binder_node_info_for_ref>(),
        24usize,
        concat!("Size of: ", stringify!(binder_node_info_for_ref))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_node_info_for_ref>(),
        4usize,
        concat!("Alignment of ", stringify!(binder_node_info_for_ref))
    );
    fn test_field_handle() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_info_for_ref>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).handle) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_info_for_ref),
                "::",
                stringify!(handle)
            )
        );
    }
    test_field_handle();
    fn test_field_strong_count() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_info_for_ref>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).strong_count) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_info_for_ref),
                "::",
                stringify!(strong_count)
            )
        );
    }
    test_field_strong_count();
    fn test_field_weak_count() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_info_for_ref>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).weak_count) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_info_for_ref),
                "::",
                stringify!(weak_count)
            )
        );
    }
    test_field_weak_count();
    fn test_field_reserved1() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_info_for_ref>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).reserved1) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_info_for_ref),
                "::",
                stringify!(reserved1)
            )
        );
    }
    test_field_reserved1();
    fn test_field_reserved2() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_info_for_ref>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).reserved2) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_info_for_ref),
                "::",
                stringify!(reserved2)
            )
        );
    }
    test_field_reserved2();
    fn test_field_reserved3() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_info_for_ref>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).reserved3) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_info_for_ref),
                "::",
                stringify!(reserved3)
            )
        );
    }
    test_field_reserved3();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_freeze_info {
    pub pid: __u32,
    pub enable: __u32,
    pub timeout_ms: __u32,
}
#[test]
fn bindgen_test_layout_binder_freeze_info() {
    assert_eq!(
        ::std::mem::size_of::<binder_freeze_info>(),
        12usize,
        concat!("Size of: ", stringify!(binder_freeze_info))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_freeze_info>(),
        4usize,
        concat!("Alignment of ", stringify!(binder_freeze_info))
    );
    fn test_field_pid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_freeze_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_freeze_info),
                "::",
                stringify!(pid)
            )
        );
    }
    test_field_pid();
    fn test_field_enable() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_freeze_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).enable) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_freeze_info),
                "::",
                stringify!(enable)
            )
        );
    }
    test_field_enable();
    fn test_field_timeout_ms() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_freeze_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).timeout_ms) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_freeze_info),
                "::",
                stringify!(timeout_ms)
            )
        );
    }
    test_field_timeout_ms();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_frozen_status_info {
    pub pid: __u32,
    pub sync_recv: __u32,
    pub async_recv: __u32,
}
#[test]
fn bindgen_test_layout_binder_frozen_status_info() {
    assert_eq!(
        ::std::mem::size_of::<binder_frozen_status_info>(),
        12usize,
        concat!("Size of: ", stringify!(binder_frozen_status_info))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_frozen_status_info>(),
        4usize,
        concat!("Alignment of ", stringify!(binder_frozen_status_info))
    );
    fn test_field_pid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_frozen_status_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_frozen_status_info),
                "::",
                stringify!(pid)
            )
        );
    }
    test_field_pid();
    fn test_field_sync_recv() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_frozen_status_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).sync_recv) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_frozen_status_info),
                "::",
                stringify!(sync_recv)
            )
        );
    }
    test_field_sync_recv();
    fn test_field_async_recv() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_frozen_status_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).async_recv) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_frozen_status_info),
                "::",
                stringify!(async_recv)
            )
        );
    }
    test_field_async_recv();
}
pub const transaction_flags_TF_ONE_WAY: transaction_flags = 1;
pub const transaction_flags_TF_ROOT_OBJECT: transaction_flags = 4;
pub const transaction_flags_TF_STATUS_CODE: transaction_flags = 8;
pub const transaction_flags_TF_ACCEPT_FDS: transaction_flags = 16;
pub const transaction_flags_TF_CLEAR_BUF: transaction_flags = 32;
pub type transaction_flags = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct binder_transaction_data {
    pub target: binder_transaction_data__bindgen_ty_1,
    pub cookie: binder_uintptr_t,
    pub code: __u32,
    pub flags: __u32,
    pub sender_pid: pid_t,
    pub sender_euid: uid_t,
    pub data_size: binder_size_t,
    pub offsets_size: binder_size_t,
    pub data: binder_transaction_data__bindgen_ty_2,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union binder_transaction_data__bindgen_ty_1 {
    pub handle: __u32,
    pub ptr: binder_uintptr_t,
}
#[test]
fn bindgen_test_layout_binder_transaction_data__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<binder_transaction_data__bindgen_ty_1>(),
        8usize,
        concat!(
            "Size of: ",
            stringify!(binder_transaction_data__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<binder_transaction_data__bindgen_ty_1>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(binder_transaction_data__bindgen_ty_1)
        )
    );
    fn test_field_handle() {
        assert_eq!(
            unsafe {
                let uninit =
                    ::std::mem::MaybeUninit::<binder_transaction_data__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).handle) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_transaction_data__bindgen_ty_1),
                "::",
                stringify!(handle)
            )
        );
    }
    test_field_handle();
    fn test_field_ptr() {
        assert_eq!(
            unsafe {
                let uninit =
                    ::std::mem::MaybeUninit::<binder_transaction_data__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ptr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_transaction_data__bindgen_ty_1),
                "::",
                stringify!(ptr)
            )
        );
    }
    test_field_ptr();
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union binder_transaction_data__bindgen_ty_2 {
    pub ptr: binder_transaction_data__bindgen_ty_2__bindgen_ty_1,
    pub buf: [__u8; 8usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_transaction_data__bindgen_ty_2__bindgen_ty_1 {
    pub buffer: binder_uintptr_t,
    pub offsets: binder_uintptr_t,
}
